# agentic-banking-crm

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_knowledge_embeddings.py  003_add_dnd_registry.py  d6b5344235ae_add_ab_outreach_options.py
docs/: demo_script.md
docs/architecture/: README.md  deep_dive_system_architecture_and_business_value.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
infra/docker/: Dockerfile.gateway  docker-compose.yml  init.sql
infra/monitoring/: prometheus.yml
scripts/: backfill_embeddings.py  seed_db.py
services/gateway/: main.py
services/gateway/middleware/: __init__.py  audit.py  auth.py  pii_mask.py  rate_limiter.py
services/notifications/: compliance.py  tracker.py
services/rag/: __init__.py
services/workers/: beat_schedule.py  celery_app.py
shared/: __init__.py
shared/config/: __init__.py  settings.py
shared/constants/: __init__.py  enums.py
shared/db/: __init__.py  base.py  models.py  session.py
shared/exceptions/: __init__.py  domain.py
shared/models/: __init__.py  agent_state.py  audit.py  customer.py  opportunity.py
shared/utils/: crypto.py  pii_utils.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/fixtures/: synthetic_customers.py
tests/integration/: __init__.py  test_graph.py  test_rag_search.py
tests/unit/: __init__.py  test_copilot_filters.py  test_pii_mask.py  test_report_gen.py  test_wealth_migration.py
(+76 files in other folders)
