[tool.poetry]
name = "rm-copilot"
version = "0.1.0"
description = "Enterprise RM Copilot — Banking Intelligence Platform"
authors = ["RM Copilot Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.4"}
celery = {extras = ["redis"], version = "^5.4.0"}
langgraph = "^0.1.0"
langchain-openai = "^0.1.0"
openai = "^1.30.0"
pgvector = "^0.3.0"
presidio-analyzer = "^2.2.354"
presidio-anonymizer = "^2.2.354"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
scikit-learn = "^1.5.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"  # Used directly — passlib 1.7.x is incompatible with bcrypt 4.x
python-multipart = "^0.0.9"  # Required for FastAPI form parsing
spacy = "^3.7.0"  # Required by Presidio NLP pipeline (run: python -m spacy download en_core_web_sm)
httpx = "^0.27.0"
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
tenacity = "^8.3.0"
structlog = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
